k8s/arr/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:4.0.14
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: sonarr-data
        - mountPath: /tv
          name: tvseries
        - mountPath: /downloads
          name: downloads
        ports:
        - containerPort: 8989
        livenessProbe:
          httpGet:
            path: /
            port: 8989
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8989
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: sonarr-data
        persistentVolumeClaim:
          claimName: sonarr-data-pvc
      - name: tvseries
        nfs:
          server: 192.168.2.254
          path: /mnt/tank/media/Tv
      - name: downloads
        nfs:
          server: 192.168.2.254
          path: /mnt/tank/downloads
